src/objects/Site_Candidate_Lead__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsImported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsImported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Reference__c</fullName>
        <label>Job Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <label>LeadSource</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadType__c</fullName>
        <label>LeadType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>MobilePhone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Site Candidate Lead</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Job_Reference__c</columns>
        <columns>IsImported__c</columns>
        <columns>Company__c</columns>
        <columns>Email__c</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>LeadSource__c</columns>
        <columns>LeadType__c</columns>
        <columns>MobilePhone__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CANDIDATE-LEAD-{0000}</displayFormat>
        <label>Site Candidate Lead Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Candidate Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>